--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,20 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
     repositories {
         jcenter()
+        maven {
+            url  "http://zechassault.bintray.com/ImageMap"
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.3'
-
-        classpath "com.android.tools.build:gradle:1.2.3"
-        classpath "jp.leafytree.gradle:gradle-android-scala-plugin:1.4"
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.android.tools.build:gradle:2.2.2'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.4'
     }
 }
 
 allprojects {
+
     repositories {
         jcenter()
     }
