--- a/zonemap/build.gradle
+++ b/zonemap/build.gradle
@@ -1,9 +1,6 @@
 apply plugin: 'com.android.library'
-ext {
-    PUBLISH_GROUP_ID = 'com.zechassault'
-    PUBLISH_ARTIFACT_ID = 'zonemap'
-    PUBLISH_VERSION = '0.0.1'
-}
+
+version = "0.0.1"
 android {
     compileSdkVersion 24
     buildToolsVersion "24.0.3"
@@ -12,7 +9,7 @@ android {
         minSdkVersion 11
         targetSdkVersion 24
         versionCode 1
-        versionName "1.0"
+        versionName version
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -24,12 +21,40 @@ android {
         }
     }
 }
-
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
+
     testCompile 'junit:junit:4.12'
+}
+ext {
+    userOrg = 'zechassault'
+    bintrayRepo = 'maven'
+    bintrayName = 'imagemap'
+
+    publishedGroupId = 'com.zechassault.zonemap'
+    libraryName = 'ImageMap'
+    artifact = 'imagemap'
+
+    libraryDescription = 'A visual library to define clickable zone on top of an image on Android'
+
+    siteUrl = 'https://github.com/lary-pipot/ImageMap'
+    gitUrl = 'https://github.com/lary-pipot/ImageMap.git'
+
+    libraryVersion = '0.0.1'
+
+    developerId = 'zech'
+    developerName = 'Zack Ciminera'
+    developerEmail = 'pernifloss@gmail.com'
+
+    licenseName = 'The MIT License (MIT)'
+    licenseUrl = 'https://opensource.org/licenses/MIT'
+    allLicenses = ["MIT"]
+
+    apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+    apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
+
 }
