--- a/zonemap/build.gradle
+++ b/zonemap/build.gradle
@@ -8,7 +8,7 @@ android {
     defaultConfig {
         minSdkVersion 11
         targetSdkVersion 24
-        versionCode 1
+        versionCode 3
         versionName version
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -33,7 +33,7 @@ dependencies {
 }
 
 group = 'com.zechassault.zonemap'
-version = '0.1.0'
+version = '0.1.1'
 
 task generateSourcesJar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
@@ -53,14 +53,16 @@ task generateJavaDocsJar(type: Jar) {
 generateJavaDocsJar.dependsOn generateJavaDocs
 
 bintray {
+    user = 'pernifloss'
+    key = 'bc9611a132a5a0ef361e7b8ebae1927a15eccee3'
     pkg {
         repo = 'maven'
         name = 'imagemap'
         userOrg  = 'zechassault'
         version {
-            name = '0.1.0-zone'
-            desc = '0.1.0'
-            vcsTag = '0.1.0'
+            name = '0.1.1-zone'
+            desc = '0.1.1'
+            vcsTag = '0.1.1'
         }
 
         licenses = ['MIT']
