--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "24.0.1"
 
     defaultConfig {
-        applicationId "com.larypipot.cimi.imagemap"
+        applicationId "com.zechassault.zonemap"
         minSdkVersion 11
         targetSdkVersion 24
         versionCode 1
